# cloud-operations-readiness-skill

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  REFERENCE.md  SKILL.md  examples.md  pyproject.toml  run-log.md
.github/workflows/: python-ci.yml  skill-integrity.yml
artefacts/800-wide/: 01-stack-map.md  02-deploy-manifest.md  03-ci-workflow.md  04-incident-runbook.md  05-cost-estimate.md  06-readiness-brief.md
changes/operational-drift-risk-model/: delta.md  plan.md  tasks.md
context/cold/: README.md  gap-log.md
docs/: ci.md
docs/adr/: ADR-001-reference-engine.md
docs/context/: stack.md
docs/decisions/: parser-architecture-debate.md
docs/replay/: toolkit-artifact-persistence-packet.md
reviews/T1/: findings.csv  pr-provenance.md  review.md
scripts/ci/: validate-skill.sh
sessions/T1/: session-log.md
skills/cloud-operations-analysis/: SKILL.md
specs/operational-drift-analysis/: audit.md  spec.md
src/readiness_engine/: __init__.py  classifier.py  models.py  parser.py  report.py  validator.py
tests/: __init__.py  test_classifier.py  test_models.py  test_parser.py  test_validator.py
